base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
  labels:
    app: vllm
    gitops-test: automated-sync
  annotations:
    gitops.example.com/managed-by: argocd

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vllm

  template:
    metadata:
      labels:
        app: vllm

    spec:
      containers:
        - name: vllm
          image: ghcr.io/sachin001234/vllm-platform:30f86a3d9cda8b6dc0a01b2f90132c16a03c77e9

          ports:
            - containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          args:
            - --model
            - Qwen/Qwen2.5-1.5B-Instruct-AWQ
            - --quantization
            - awq
