base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm
  labels:
    app: vllm

spec:
  selector:
    app: vllm

  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP

  type: ClusterIP
